[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-runtime"
version = "1.3.0"
description = "Agent 时代的可信信源工作区：知识库质检（来源分级+核实标注）与自维护运行时 / A trusted-source workspace for the agent era"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "ruiyaoe-hash" }]
keywords = ["agent", "runtime", "llm", "knowledge-base", "markdown", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ruiyaoe-hash/my-wiki"
Repository = "https://github.com/ruiyaoe-hash/my-wiki"
Issues = "https://github.com/ruiyaoe-hash/my-wiki/issues"

[project.scripts]
agent-runtime = "agents.cli:main"

[tool.setuptools]
packages = ["agents", "planner", "executor", "event_bus", "memory", "state_manager", "console"]
